@@ -48,6 +48,12 @@
       <artifactId>javafx-fxml</artifactId>
       <version>${javafx.version}</version>
     </dependency>
+    <!-- JavaFX Swing interop -->
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-swing</artifactId>
+      <version>${javafx.version}</version>
+    </dependency>
 
     <!-- MySQL Connector/J 8.0 -->
     <dependency>
@@ -56,7 +62,7 @@
       <version>8.0.33</version>
     </dependency>
 
-    <!-- dotenv dependency-->
+    <!-- dotenv dependency -->
     <dependency>
       <groupId>io.github.cdimascio</groupId>
       <artifactId>dotenv-java</artifactId>
@@ -114,6 +120,9 @@
         <version>0.0.8</version>
         <configuration>
           <mainClass>${mainClass}</mainClass>
+          <options>
+            <option>--add-modules=javafx.controls,javafx.fxml,javafx.swing</option>
+          </options>
         </configuration>
         <executions>
           <execution>
